<resources>
    <string name="app_name" translatable="false">Android Labs</string>
    <string name="enter_email">Enter your email address:</string>
    <string name="pass">Type your password:</string>
    <string name="emailhint">Type email here. . .</string>
    <string name="login">Login</string>
    <string name="profile_header">Your Profile</string>
    <string name="uname">Your name:</string>
    <string name="namehint">Enter your name...</string>
    <string name="uemail">Your email:</string>
    <string name="upicture">Your picture:</string>
    <string name="clickText">Click the button above to take a picture</string>
    <string name="gochat">Go to chat</string>
    <string name="sButton">Send</string>
    <string name="tHere">Type Here</string>
    <string name="rButton">Receive</string>
    <string name="goweather">Go to weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>