<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/enter_email"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/emailhint"
        android:textSize="20dp"
        android:inputType="textEmailAddress"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/pass"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/passText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="308dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="149dp" />

</LinearLayout>