<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ChatRoomActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="550dp">
        <ListView
            android:id="@+id/myListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"

        >

        <Button
            android:id="@+id/mySButton"
            android:layout_width="116dp"
            android:layout_height="50dp"
            android:text="@string/sButton" />

        <EditText
            android:inputType="textCapSentences"
            android:id="@+id/txtmsg"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:hint="@string/tHere" />
        <Button
            android:id="@+id/myRButton"
            android:layout_width="126dp"
            android:layout_height="50dp"
            android:text="@string/rButton" />

    </LinearLayout>

</LinearLayout>